@@ -1,3 +1,8 @@
+Tue Jul  3 12:10:53 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* interp.c (DISCARD_STATUS): discard error status values using a
+ 	macro for configurability
+
 Sun Jul  1 21:41:27 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* cspline.c: added const to state in appropriate places
